# ampliphi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline.yml
src/ampliphi/: __init__.py  ast_nodes.py  codegen.py  exceptions.py  ir.py  lexer.py  main.py  parser.py  utils.py
tests/: test_lexer.py
tests/end_to_end_tests/: test_all.py
tests/invalid_syntax/: test_all.py  test_binary_chain_invalid.aphi  test_declaration_in_procedure.aphi  test_expr_in_if_condition.aphi  test_global_statement.aphi  test_illegal_char.aphi  test_invalid_unary.aphi  test_missing_else.aphi  test_missing_lbrace.aphi  test_missing_rhs.aphi  test_missing_rparen.aphi  test_missing_semicolon.aphi  test_nested_procedure_def.aphi  test_unexpected_token.aphi
tests/invalid_typecheck/: test_all.py  test_no_declarations.aphi  test_tc_add_left_bool.aphi  test_tc_add_right_bool.aphi  test_tc_and_left_int.aphi  test_tc_and_right_int.aphi  test_tc_array_index_bool.aphi  test_tc_array_size_zero.aphi  test_tc_assign_bool_to_int.aphi  test_tc_assign_int_to_bool.aphi  test_tc_assign_int_to_bool_array.aphi  test_tc_assign_to_array_name.aphi  test_tc_assign_to_proc.aphi  test_tc_duplicate_proc.aphi  test_tc_duplicate_var.aphi  test_tc_eq_mismatch.aphi  test_tc_gt_left_bool.aphi  test_tc_gt_right_bool.aphi  test_tc_if_int_condition.aphi  test_tc_index_non_array.aphi  test_tc_invoke_bool_var.aphi  test_tc_invoke_int_var.aphi  test_tc_invoke_undeclared.aphi  test_tc_lt_left_bool.aphi  test_tc_lt_right_bool.aphi  test_tc_missing_main.aphi  test_tc_not_on_int.aphi  test_tc_or_left_int.aphi  (+7 more)
(+76 files in other folders)
